// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render InlineDatePicker disable picker with date 1`] = `
<span
  class="control textinput control_disabled_yes textinput_disabled_yes textinput_theme_normal textinput_view_classic textinput_size_s textinput_pin_round-round textinput_has-pin_yes textinput"
  data-lego="react"
>
  <input
    class="textinput__control"
    data-lego="react"
    disabled=""
    type="text"
    value="26 September 2019"
  />
  <span
    class="textinput__box"
    data-lego="react"
  />
</span>
`;

exports[`Should render InlineDatePicker disable picker without date 1`] = `
<span
  class="control textinput control_disabled_yes textinput_disabled_yes textinput_theme_normal textinput_view_classic textinput_size_s textinput_pin_round-round textinput_has-pin_yes textinput"
  data-lego="react"
>
  <input
    class="textinput__control"
    data-lego="react"
    disabled=""
    type="text"
    value=""
  />
  <span
    class="textinput__box"
    data-lego="react"
  />
</span>
`;

exports[`Should render InlineDatePicker enable picker with date 1`] = `
<div
  class="DatePicker"
>
  <div
    class="DayPickerInput"
  >
    <span
      class="control textinput textinput_theme_normal textinput_view_classic textinput_size_s textinput_pin_round-round textinput_has-pin_yes textinput"
      data-lego="react"
    >
      <input
        class="textinput__control"
        data-lego="react"
        placeholder=""
        type="text"
        value="26 сентября 2019"
      />
      <span
        class="textinput__box"
        data-lego="react"
      />
    </span>
  </div>
</div>
`;

exports[`Should render InlineDatePicker enable picker without date 1`] = `
<div
  class="DatePicker"
>
  <div
    class="DayPickerInput"
  >
    <span
      class="control textinput textinput_theme_normal textinput_view_classic textinput_size_s textinput_pin_round-round textinput_has-pin_yes textinput"
      data-lego="react"
    >
      <input
        class="textinput__control"
        data-lego="react"
        placeholder=""
        type="text"
        value=""
      />
      <span
        class="textinput__box"
        data-lego="react"
      />
    </span>
  </div>
</div>
`;
